--- a/BoxViewClock/BoxViewClock/Pages/SettingsPage.xaml
+++ b/BoxViewClock/BoxViewClock/Pages/SettingsPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="BoxViewClock.Settings"
+             x:Class="BoxViewClock.Pages.SettingsPage"
              Title="Settings">
   <StackLayout Spacing="10">
     <Label Text="Short"/>
