Aggiunto pulsante di chiusura alla pagina delle impostazioni per mancanza del pulsante indietro su iOS. Aggiunto margine in alto alla pagina delle impostazioni per evitare che la status bar copra la pagina. Modificato il campo editor nella pagina delle impostazioni per evitare che l'utente possa inserire degli a capo e per uniformarne la visualizzazione su iOS.

--- a/BoxViewClock/BoxViewClock/Pages/SettingsPage.xaml
+++ b/BoxViewClock/BoxViewClock/Pages/SettingsPage.xaml
@@ -1,12 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="BoxViewClock.Pages.SettingsPage"
-             Title="Settings">
-  <StackLayout Spacing="10">
-    <Label Text="Short"/>
-    <Entry Placeholder="Short Format" TextChanged="Short_Changed" MeasureInvalidated="Short_Added"/>
-    <Label Text="Long"/>
-    <Editor  TextChanged="Long_Changed" MeasureInvalidated="Long_Added"/>
-  </StackLayout>
+     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+     x:Class="BoxViewClock.Pages.SettingsPage"
+     Title="Settings">
+	
+    <ContentPage.Padding>
+        <OnPlatform x:TypeArguments="Thickness">
+            <OnPlatform.iOS>
+                0, 20, 0, 0
+            </OnPlatform.iOS>
+		</OnPlatform>
+    </ContentPage.Padding>
+	
+    <StackLayout Spacing="10">
+        <Label Text="Formato data breve"/>
+        <Entry x:Name="Short" TextChanged="Short_Changed" MeasureInvalidated="Short_Added" />
+        	
+        <Label Text="Formato data estesa"/>
+        <Entry x:Name="Long" TextChanged="Long_Changed" MeasureInvalidated="Long_Added" />
+
+        <Button Text="Chiudi" Clicked="DismissButton_Clicked" />
+    </StackLayout>
 </ContentPage>
