Modificata la MainActivity in AppCompat e aggiunta la gestione dei temi. Modificato il profilo della PCL da 78 a 259, aggiornata libreria Xamarin Forms. Aggiunto splash screen ad Android. Ripristinato il campo per il formato della data estesa come Editor invece che Entry.

--- a/BoxViewClock/BoxViewClock/Pages/SettingsPage.xaml
+++ b/BoxViewClock/BoxViewClock/Pages/SettingsPage.xaml
@@ -17,7 +17,7 @@
         <Entry x:Name="Short" TextChanged="Short_Changed" MeasureInvalidated="Short_Added" />
         	
         <Label Text="Formato data estesa"/>
-        <Entry x:Name="Long" TextChanged="Long_Changed" MeasureInvalidated="Long_Added" />
+        <Editor x:Name="Long" TextChanged="Long_Changed" MeasureInvalidated="Long_Added" HeightRequest="80" />
 
         <Button Text="Chiudi" Clicked="DismissButton_Clicked" />
     </StackLayout>
